--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "recharts": "^2.12.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
