--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clsx": "^2.0.0",
     "framer-motion": "^11.0.13",
     "next": "^14.0.2",
+    "next-auth": "^5.0.0-beta.15",
+    "openssl": "^2.0.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
